Removed initial intro + added some new images

--- a/Quantum Chemistry PyData talk.slides.html
+++ b/Quantum Chemistry PyData talk.slides.html
@@ -1978,7 +1978,7 @@ and on for 100+ more lines</code></pre>
 </div><div class="fragment">
     
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>(You attempt to please the master by performing suitable tasks in the hope you will be rewarded by the secret knowledge).</p>
+<p>(You attempt to please the master by completing assignments in the hope you will be rewarded by the secret knowledge).</p>
 <img src='apprentices.jpg' width=500 height=500></img>
 </div>
     </div></section><section>
@@ -2851,7 +2851,7 @@ array([-23006.96138889, -23008.77352765])
     </div></section><section>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Molmod</strong></p>
-<p>Molecular modelling toolkit offer definition of a molecule like the ASE except in the form of a Molecule class:</p>
+<p>Molecular modelling toolkit offers definition of a molecule like the ASE except in the form of a Molecule class:</p>
 </div><div class="fragment">
     
 <div class="cell border-box-sizing code_cell vbox">
