--- a/jsmol.html
+++ b/jsmol.html
@@ -2,15 +2,15 @@ DOCTYPE html>
 <html>
 <title>A simple Jsmol example</title>
 <head>
-<script type="text/javascript" src="jsmol/JSmoljQuery.js"></script>
-<script type="text/javascript" src="jsmol/JSmolCore.js"></script>
-<script type="text/javascript" src="jsmol/JSmolApplet.js"></script>
-<script type="text/javascript" src="jsmol/JSmolApi.js"></script>
-<script type="text/javascript" src="jsmol/j2s/j2sjmol.js"></script>
-<script type="text/javascript" src="jsmol/JSmol.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmoljQuery.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmolCore.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmolApplet.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmolApi.js"></script>
+<script type="text/javascript" src="files/jsmol/j2s/j2sjmol.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmol.js"></script>
 <!-- // following two only necessary for WebGL version: -->
-<script type="text/javascript" src="jsmol/JSmolThree.js"></script>
-<script type="text/javascript" src="jsmol/JSmolGLmol.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmolThree.js"></script>
+<script type="text/javascript" src="files/jsmol/JSmolGLmol.js"></script>
  
 <script type="text/javascript">
 var Info = {
